--- a/stacks/docs/example.env
+++ b/stacks/docs/example.env
@@ -10,12 +10,18 @@ gid=1000
 timezone=America/Chicago
 
 # Image settings
+autokuma_version=latest
 bookstack_version=25.11.6
 grafana_version=latest
 mysql_version=9.2
 ntfy_version=latest
 prometheus_version=latest
 uptimekuma_version=2-rootless
+
+# Autokuma settings
+kuma_pass=uptime_kuma_password
+kuma_user=uptime_kuma_username
+ntfy_token=ntfy_token
 
 # Bookstack settings
 app_key="a_base64_encoded_secret"
